fix: use static maps to save memory overhead & api logic to get the correct data

--- a/android-kotlin/feature_chatbot/src/main/res/values/strings.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
 
     <!-- Permissions -->
     <string name="microphone_permission_required">Microphone permission is required to use voice input.</string>
+    <string name="route_map">Map Preview Image</string>
 </resources>
