--- a/android-kotlin/feature_saveRoute/src/main/res/values/strings.xml
+++ b/android-kotlin/feature_saveRoute/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Saved Routes</string>
+    <string name="notif_update">
+    You will receive %2$s notifications. First will be at %1$s.\nSubsequent notifications will be sent every 5 minutes
+</string>
 </resources>
